--- a/src/CSS/style.css
+++ b/src/CSS/style.css
@@ -85,6 +85,7 @@ body {
   text-align: center;
   border-radius: 10%;
   margin-top: 2%;
+  margin-bottom: 1%;
   animation-name: move-title;
   animation-duration: 4s;
   animation-delay: 0;
@@ -151,6 +152,30 @@ img:hover {
   animation-iteration-count: infinite;
   animation-fill-mode: none;
   animation-play-state: running;
+}
+
+audio {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 2%;
+}
+
+video {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 2%;
+}
+
+.delorean {
+  width: 720px;
+  heigth: 480px;
+}
+
+.rocket {
+  width: 512px;
+  heigth: 256px;
 }
 
 /*# sourceMappingURL=style.css.map */
